--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,19 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:create": "npm run typeorm migration:create",
+    "migration:generate": "npm run typeorm migration:generate -- -d src/config/migration.config.ts",
+    "migration:up": "npm run typeorm migration:run -- -d src/config/migration.config.ts",
+    "migration:down": "npm run typeorm migration:revert -- -d src/config/migration.config.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "mysql2": "^3.10.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
