feat: forgot password and reset routes

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -5,4 +5,13 @@ DB_PORT=DB_PORT
 DB_USER=DB_USER
 DB_PASSWORD=DB_PASSWORD
 DB_NAME=DB_NAME
+
 JWT_SECRET=JWT_SECRET
+
+# set up a free mailtrap account on mailtrap.io
+MAILTRAP_HOST="sandbox.smtp.mailtrap.io"
+MAILTRAP_PORT=port
+MAILTRAP_USER=provided_user
+MAILTRAP_PASSWORD=provided_password
+
+FRONTEND_URL=your_app_url
