--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -54,3 +54,10 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Uploads folder
+/uploads
+# But not default pictures
+!/uploads/mission/mission-default.png
+!/uploads/user/picture-default.png
+!/uploads/user/banner-default.png
