--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.13",
     "jwt-decode": "^4.0.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "tailwind-hamburgers": "^1.3.5",
     "universal-cookie": "^7.2.0"
   },
   "devDependencies": {
